--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ContentMedia from '../components/ContentMedia.astro'
   <Hero />
 
 <div class="container">
-  <section id="about" class="container-xxl">
+  <section id="about" class="">
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
        <div class="mr-md-3 text-center overflow-hidden pl-4 pr-4">
           <div class="py-3">
