--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,10 +14,10 @@ import { Icon } from 'astro-icon/components'
       <a href="/blog/">Blog</a>
     </li>
     <li class="menu-item">
-      <a href="#about">about</a>
+      <a href="/#about">about</a>
     </li> 
     <li class="menu-item">
-      <a href="#contact-us">Contact Us</a>
+      <a href="/#contact-us">Contact Us</a>
     </li> 
   
     <li class="menu-item has-dropdown">
