--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const { src = 'https://hackathon.fossee.in/cfd/static/cms/uploads/images/left-im
     <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
         <h1 class="text-center text-6xl md:text-left lg:text-8xl">
-          <slot><span class="text-gradient">Accessible</span> Starter for Astro</slot>
+          <slot><span class="text-gradient">CFD Hackathon</span> Get ready to show your skills</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://github.com/markteekman/accessible-astro-starter">
@@ -26,7 +26,7 @@ const { src = 'https://hackathon.fossee.in/cfd/static/cms/uploads/images/left-im
           </a>
         </div>
       </div>
-      <img class="hidden lg:block" src={src} alt="" decoding="async" />
+      <img class="lg:block" src={src} alt="" decoding="async" />
     </div>
   </div>
 </section>
