--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { SkipLinks } from 'accessible-astro-components'
 import { Icon } from 'astro-icon/components'
 ---
 
-<header>
+<header class="sticky top-0 z-50">
   <SkipLinks />
   <Navigation>
     <li class="menu-item">
@@ -14,12 +14,14 @@ import { Icon } from 'astro-icon/components'
       <a href="/blog/">Blog</a>
     </li>
     <li class="menu-item">
-      <a href="/#about">about</a>
+      <a href="/#about">About</a>
     </li> 
     <li class="menu-item">
       <a href="/#contact-us">Contact Us</a>
     </li> 
-  
+    <li class="menu-item">
+      <a href="/result/">Result</a>
+    </li>
     <li class="menu-item has-dropdown">
       <button aria-haspopup="true" aria-expanded="false">Example Pages</button>
       <ul class="dropdown-menu">
@@ -51,6 +53,7 @@ import { Icon } from 'astro-icon/components'
   @use '../assets/scss/base/outline' as *;
 
   header {
+    background-color: var(--background);
     .type-icon a {
       display: block;
 
