--- a/src/components/Logoslot.astro
+++ b/src/components/Logoslot.astro
@@ -1,7 +1,7 @@
 ---
 import Top_logos from '../components/Top_logos.astro'
 ---
-<div class="p-2 pt-4 pb-1">
+<logoslot class="px-4 pt-4 pb-1">
 <Top_logos>
 <a href="http://iitb.ac.in/" target="_blank">
     <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/iitb-logo.png" class="w-full max-w-xs mx-auto logos" alt="IITB">
@@ -23,7 +23,21 @@ import Top_logos from '../components/Top_logos.astro'
 </a>
 
 </Top_logos>
-</div>
+</logoslot>
 <style>
+/************top logos*****************/
+
+.logos {
+  max-width: 100%;
+  height: 53.8px;
+  padding-left: 20px;
+}
+@media(max-width:998px){
+  .logos {
+    max-width: 100%;
+    height: auto;
+    padding-left: 0;
+  }
+}
 
 </style>
