--- a/src/components/Top_logos.astro
+++ b/src/components/Top_logos.astro
@@ -5,9 +5,11 @@
 
 
 <div class="banner-content">
-   <div id="top-logo-placeholder" class="container min-w-sm mx-auto sm:px-4">
-       <div class="flex justify-center"> 
+   <div id="top-logo-placeholder" class="container rounded min-w-sm mx-auto px-5 bg-white">
+       <div class="flex px-3 mx-3 justify-center"> 
+      
               <slot />
+          
        </div>
    </div>
 </div>
