anim website created

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,19 +10,43 @@ import { Icon } from 'astro-icon/components'
     <li class="menu-item">
       <a href="/">Home</a>
     </li>
-    <li class="menu-item">
+    <!-- <li class="menu-item">
       <a href="/blog/">Blog</a>
-    </li>
+    </li> -->
     <li class="menu-item">
       <a href="/#about">About</a>
     </li> 
     <li class="menu-item">
-      <a href="/#contact-us">Contact Us</a>
+      <a href="/#eligibility">Eligibility</a>
     </li> 
     <li class="menu-item">
-      <a href="/result/">Result</a>
+      <a href="/#resources">Resources</a>
+    </li> 
+    <li class="menu-item">
+      <a href="/#rules">Rules and Regulation</a>
     </li>
-    <li class="menu-item has-dropdown">
+    <li class="menu-item">
+      <a href="/#theme">Theme</a>
+    </li>
+    <li class="menu-item">
+      <a href="/#rules">Rewards</a>
+    </li>
+    
+    <!-- <li class="menu-item">
+      <a href="/result/">Result</a>
+    </li> -->
+    <!-- <li class="menu-item">
+      <a href="/alternate_result">alResult</a>
+    </li> -->
+    <li class="menu-item">
+      <a href="/#contact-us">Contact</a>
+    </li> 
+
+
+
+
+
+    <!-- <li class="menu-item has-dropdown">
       <button aria-haspopup="true" aria-expanded="false">Example Pages</button>
       <ul class="dropdown-menu">
         <li class="submenu-item">
@@ -40,7 +64,7 @@ import { Icon } from 'astro-icon/components'
 
     <li class="menu-item">
       <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">External Link</a>
-    </li>
+    </li> -->
     <!-- <li class="menu-item type-icon">
       <a href="https://github.com/markteekman/accessible-astro-starter" title="Go to the GitHub page">
         <Icon name="ion:logo-github" />
