--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -17,7 +17,7 @@ import { Image } from 'astro:assets'
           <slot />
         </ul>
       </nav>
-      <DarkMode />
+      <!-- <DarkMode /> -->
       <ResponsiveToggle />
     </div>
     <nav class="mobile-menu" aria-label="Main navigation mobile">
