--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -113,8 +113,8 @@ html{
       }
 
       .section-title{
-        color: red;
-        font-weight: 900;
+        color: #0000ff;
+        font-weight: 600;
       }
     </style>
   </body>
