--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -147,3 +147,90 @@ body {
     }
   }
 }
+
+
+// Import the Poppins font from Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+  text-rendering: optimizeLegibility;
+  font-synthesis: none;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+
+  a:not(.button) {
+    color: var(--action-color);
+    text-decoration: underline;
+
+    &:visited {
+      color: var(--action-color);
+    }
+
+    &:hover,
+    &:focus {
+      color: var(--action-color-state);
+      text-decoration: none;
+    }
+  }
+
+  :where(main) a {
+    word-wrap: break-word;
+    word-break: break-word;
+  }
+
+  :where(h1, h2) {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  h1,
+  h2 {
+    font-weight: 600;
+  }
+
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 400;
+  }
+
+  h1 {
+    font-size: 2.25rem;
+    line-height: 3.375rem;
+
+    // ... (rest of the h1 styles)
+  }
+
+  h2 {
+    font-size: 1.875rem;
+    line-height: 2.8125rem;
+
+    // ... (rest of the h2 styles)
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+
+    // ... (rest of the h3 styles)
+  }
+
+  h4 {
+    font-size: 1.25rem;
+    line-height: 1.875rem;
+
+    // ... (rest of the h4 styles)
+  }
+
+  h5 {
+    font-size: 1.125rem;
+    line-height: 1.6875rem;
+
+    // ... (rest of the h5 styles)
+  }
+}
