--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,23 +26,23 @@ const currentYear = new Date().getFullYear()
     
 <!-- <section id="footer" class="site-footer">
   <footer class="container mx-auto sm:px-4 max-w-full mx-auto sm:px-4 py-5 site-footer pl-5 pr-4"> -->
-     <div class="flex rounded pt-4 flex-wrap" style="background-color:var(--secondary-500);">
+     <div class="flex rounded pt-4 flex-wrap" style="background-color:#434343;">
         <div class="sm:w-1/2 pl-3">
            <ul class="list-unstyled text-small">
               <li><a class="text-gray-700" href="https://fossee.in" target="_blank">FOSSEE</a></li>
-              <li><a class="text-gray-700" href="https://cfd.fossee.in/" target="_blank">CFD</a></li>
-              <!--<li><a class="text-gray-700" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>-->
+              <li><a class="text-gray-700" href="https://focal.fossee.in/" target="_blank">Focal</a></li>
+              <li><a class="text-gray-700" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>
            </ul>
         </div>
-        <!--<div class="sm:w-1/4 pr-4 pl-4">
-           <h5>Resources</h5>
+        <div class="sm:w-1/4 pr-4 pl-4 py-3">
+           <h5 class="text-white">Resources</h5>
            <ul class="list-unstyled text-small">
               <li><a class="text-gray-700" href="https://www.synfig.org/" target="_blank">Synfig.org</a></li>
-              <li><a class="text-gray-700" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>
+              <li><a class="text-gray-7 00" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>
               <li><a class="text-gray-700" href="https://forums.fossee.in/" target="_blank">Fossee Forum</a></li>
               <li><a class="text-gray-700" href="https://forums.spoken-tutorial.org" target="_blank">Spoken Tutorial Forum</a></li>
            </ul>
-        </div>-->
+        </div>
        <!--  <div class="sm:w-1/4 pr-4 pl-4">
            <h5>Socail Media</h5>
            <ul class="list-unstyled text-small">
@@ -54,15 +54,28 @@ const currentYear = new Date().getFullYear()
               </li>
            </ul>
         </div>-->
-        <br>
+        <!-- <br>
         <div class="sm:w-1/2 pr-4 pl-4"> 
            <small class="block mb-4 text-gray-700">
               <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://hackathon.fossee.org/3D-anim/static/cms/uploads/images/88x31.png"></a><br>
               This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
                  Attribution-ShareAlike 4.0 International License</a>.
            </small>
-        </div>
+        </div> -->
         </div>
       </section>  
   </footer>
+<div class="container text-sm flex items-center justify-center py-3">
+   This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. <br/>
+The FOSSEE project is funded by the National Mission on Education through ICT, <br/>
+Ministry of Education, Government of India.
 
+</div>
+<style lang="css">
+  li a{
+      color:white;
+   }
+   li a:hover{
+      color: red;
+   }
+</style>
