--- a/src/components/Logoslot.astro
+++ b/src/components/Logoslot.astro
@@ -9,7 +9,7 @@ import Top_logos from '../components/Top_logos.astro'
 <a href="https://fossee.in" target="_blank">
     <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/fossee-logo.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE">
 </a>
-<a href="http://www.rudra.iitb.ac.in/" target="_blank">
+<!-- <a href="http://www.rudra.iitb.ac.in/" target="_blank">
     <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/rudra-logo.png" class="w-full max-w-xs mx-auto logos" alt="Rudra">
 </a>
 <a href="https://www.iittp.ac.in/" target="_blank">
@@ -20,7 +20,7 @@ import Top_logos from '../components/Top_logos.astro'
 </a>
 <a href="https://nmicps.in/" target="_blank">
     <img src="https://iot-gis-hackathon.fossee.org/static/cms/uploads/images/NM-ICPS-logo1.png" class="w-full max-w-xs mx-auto logos" alt="NMICPS">
-</a>
+</a> -->
 
 </Top_logos>
 </logoslot>
