folder location change

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@ const { src = 'https://hackathon.fossee.in/cfd/static/cms/uploads/images/left-im
         </div>
         <div class="flex items-center justify-center">
 
-          <img src="/src/assets/img/synfig.png" alt="img" width="75%" >
+          <img src="src/images/synfig.png" alt="img" width="75%" >
         </div>
         <!-- <span class="text-gradient">CFD Hackathon</span> -->
         <div class="flex items-center justify-center flex-col gap-3 min-[500px]:flex-row">
@@ -30,7 +30,7 @@ const { src = 'https://hackathon.fossee.in/cfd/static/cms/uploads/images/left-im
         </div>
       </div>
       <!-- <img class="lg:block" src={src} alt="" decoding="async" /> -->
-      <img src="/src/assets/img/full_hero.png" alt="img">
+      <img src="src/images/full_hero.png" alt="img">
     </div>
   </div>
 </section>
