--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,10 @@ import Hero from '../components/Hero.astro'
 import Feature from '../components/Feature.astro'
 import Counter from '../components/Counter.astro'
 import ContentMedia from '../components/ContentMedia.astro'
+import { Image } from 'astro:assets'
+import localBirdImage from '../images/register.png'
+// const { localBirdImage = '../images/register.png' } = Astro.props
+// /home/fossee/astro-first-hackathon/src/images/register.png
 ---
 
 <DefaultLayout title="Home">
@@ -14,27 +18,28 @@ import ContentMedia from '../components/ContentMedia.astro'
 
   <!-- Card 1 -->
   <a href="/register" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
-   
-    <img src="../images/register.png" alt="Image 1" class="w-1/4 w-25">
+    <!-- <Image src={import('../images/register.png')} alt="img"/> -->
+    <img  src={localBirdImage.src} alt="regi" decoding="async" />
+    <!-- <img src="../images/register.png" alt="Image 1" class="w-1/4 w-25"> -->
 
     <p class="text-center mt-2">Register</p>
   </a>
 
   <!-- Card 2 -->
   <a href="/theme" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
-    <img src="../images/theme.png" alt="Image 2" class="w-1/4 w-25">
+    <!-- <img src="../images/theme.png" alt="Image 2" class="w-1/4 w-25"> -->
     <p class="text-center mt-2">Theme and Guidelines</p>
   </a>
 
   <!-- Card 3 -->
   <a href="/submission" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
-    <img src="../images/submission.png" alt="Image 3" class="w-1/4 w-25">
+    <!-- <img src="../images/submission.png" alt="Image 3" class="w-1/4 w-25"> -->
     <p class="text-center mt-2">Submission of animation</p>
   </a>
 
   <!-- Card 4 -->
   <a href="evolution" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
-    <img src="../images/evolution.png" alt="Image 4" class="w-1/4 w-25">
+    <!-- <img src="../images/evolution.png" alt="Image 4" class="w-1/4 w-25"> -->
     <p class="text-center mt-2">Evolution &
       Winner/Result</p>
   </a>
@@ -85,7 +90,7 @@ import ContentMedia from '../components/ContentMedia.astro'
        
 
           <!-- Content for the second column (.col-6) -->
-          <img src="../images/what_is.png" alt="img">
+          <!-- <img src="../images/what_is.png" alt="img"> -->
        
       </div>
     </div>
@@ -99,7 +104,7 @@ import ContentMedia from '../components/ContentMedia.astro'
        
 
         <!-- Content for the second column (.col-6) -->
-        <img src="../images/eligibility.png" alt="img">
+        <!-- <img src="../images/eligibility.png" alt="img"> -->
      
     </div>
       <div class="py-3 w-full sm:w-1/2">
@@ -137,7 +142,7 @@ import ContentMedia from '../components/ContentMedia.astro'
        
 
           <!-- Content for the second column (.col-6) -->
-          <img src="../images/resources.png" alt="img">
+          <!-- <img src="../images/resources.png" alt="img"> -->
        
       </div>
     </div>
@@ -152,7 +157,7 @@ import ContentMedia from '../components/ContentMedia.astro'
        
 
         <!-- Content for the second column (.col-6) -->
-        <img src="../images/poster.png" alt="poster">
+        <!-- <img src="../images/poster.png" alt="poster"> -->
      
     </div>
       <div class="py-3 w-full sm:w-1/2">
@@ -177,12 +182,12 @@ import ContentMedia from '../components/ContentMedia.astro'
         <div class="px-4 pt-4 pb-1">
           
           <a href="http://iitb.ac.in/" target="_blank">
-              <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="IITB">
+              <!-- <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="IITB"> -->
           </a>
           </div>
           <div class="px-4 pt-4 pb-1">
           <a href="https://fossee.in" target="_blank">
-              <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE">
+              <!-- <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
           </a>
           <!-- <a href="http://www.rudra.iitb.ac.in/" target="_blank">
               <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploadssrc/images/rudra-logo.png" class="w-full max-w-xs mx-auto logos" alt="Rudra">
@@ -217,22 +222,22 @@ import ContentMedia from '../components/ContentMedia.astro'
         <div class="px-4 pt-4 pb-1">
           
           <a href="http://iitb.ac.in/" target="_blank">
-              <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/iitb-logo.png" class="w-full max-w-xs mx-auto logos" alt="IITB">
+              <!-- <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/iitb-logo.png" class="w-full max-w-xs mx-auto logos" alt="IITB"> -->
           </a>
           </div>
           <div class="px-4 pt-4 pb-1">
           <a href="https://fossee.in" target="_blank">
-              <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/fossee-logo.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE">
+              <!-- <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploads/images/fossee-logo.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
           </a>
         </div>
           <div class="px-4 pt-4 pb-1">
             <a href="https://fossee.in" target="_blank">
-                <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE">
+                <!-- <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
             </a>
           </div>
           <div class="px-4 pt-4 pb-1">
             <a href="https://fossee.in" target="_blank">
-                <img src="../images/image13.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE">
+                <!-- <img src="../images/image13.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
             </a>
           <!-- <a href="http://www.rudra.iitb.ac.in/" target="_blank">
               <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploadssrc/images/rudra-logo.png" class="w-full max-w-xs mx-auto logos" alt="Rudra">
