--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,10 +26,10 @@ import { Icon } from 'astro-icon/components'
       <a href="/#rules">Rules and Regulation</a>
     </li>
     <li class="menu-item">
-      <a href="/#theme">Theme</a>
+      <a href="/#">Theme</a>
     </li>
     <li class="menu-item">
-      <a href="/#rules">Rewards</a>
+      <a href="/#">Rewards</a>
     </li>
     
     <!-- <li class="menu-item">
