--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -190,7 +190,7 @@ import FOSSEE from '../images/FOSSEE.png'
   </div>
 </section>
 <!-------------- -->
-<section id="partners1" class="py-3">
+<!--<section id="partners1" class="py-3">
   <div class="container flex items-center justify-center">
 <h1 class="section-title">- Endorsement Partners -</h1>
 </div>
@@ -202,34 +202,23 @@ import FOSSEE from '../images/FOSSEE.png'
         <div class="px-4 pt-4 pb-1">
           
           <a href="http://focal.iitb.ac.in/" target="_blank">
-              <!-- <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="IITB"> -->
+              
               <img src={focal.src} alt="poster" decoding="async" />
           </a>
           </div>
           <div class="px-4 pt-4 pb-1">
           <a href="https://focal.fossee.in" target="_blank">
             <img src={focal.src} alt="fossee" decoding="async" />
-              <!-- <img src="../images/image2.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
+              
           </a>
-          <!-- <a href="http://www.rudra.iitb.ac.in/" target="_blank">
-              <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploadssrc/images/rudra-logo.png" class="w-full max-w-xs mx-auto logos" alt="Rudra">
-          </a>
-          <a href="https://www.iittp.ac.in/" target="_blank">
-              <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploadssrc/images/iit-tirupati.png" class="w-full max-w-xs mx-auto logos" alt="IIT Tirupati">
-          </a>
-          <a href="https://iittnif.com/" target="_blank">
-              <img src="https://iitb-fossee-mapathon.fossee.in/static/cms/uploadssrc/images/navavishkaar.png" class="w-full max-w-xs mx-auto logos" alt="IITTNiF">
-          </a>
-          <a href="https://nmicps.in/" target="_blank">
-              <img src="https://iot-gis-hackathon.fossee.org/static/cms/uploadssrc/images/NM-ICPS-logo1.png" class="w-full max-w-xs mx-auto logos" alt="NMICPS">
-          </a> -->
+          
           
          
         </div>
               
   </div>
 </div>
-</section>
+</section>-->
 <!----------------------->
 <section id="partners2" class="py-3">
   <div class="container flex items-center justify-center">
