--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,8 +23,8 @@ import synfig from "../images/synfig.png"
         <!-- <span class="text-gradient">CFD Hackathon</span> -->
         <div class="flex items-center justify-center flex-col gap-3 min-[500px]:flex-row">
           <div class="dates">
-            <p class="important-dates text-green-600 flex items-center justify-center"><strong>Registration starts on: </strong>15 March 2024</p>
-            <p class="important-dates text-blue-600 flex items-center justify-center"><strong>Submission duration: </strong>1 April - 21 April 2024</p>
+            <p class="important-dates text-green-600 flex items-center justify-centertext-2xl md:text-left lg:text-2xl"><strong>Registration starts on: &nbsp;</strong> 15 March 2024</p>
+            <p class="important-dates text-blue-600 flex items-center justify-center text-2xl md:text-left lg:text-2xl"><strong>Submission duration: &nbsp;</strong> 1 April - 21 April 2024</p>
            <!-- <p class="important-dates"><strong>Hackathon start date : </strong>March 01, 2024 (tentative)</p> -->
             <!--<p class="important-dates"><strong>Problem Statement Announcement + Submission Opens: </strong>12th Nov</p>
             <p class="important-dates"><strong>Submission Closes:</strong> 28th Nov</p>
