--- a/src/pages/evolution.astro
+++ b/src/pages/evolution.astro
@@ -8,15 +8,16 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
           <!-- 1/4 Width Column -->
           <div class="col-span-1 bg-gray-300 p-4">
             <img src=""/>
-            <h1 class="section-title">Register</h1>
-            Scan QR code for registration or 
-            click on  - I like to participate - Link of Google form
+            <h1 class="section-title">Click here to see 
+              Successful participant and 
+              winner’s list.</h1>
+            
         
         </div>
         <!-- 3/4 Width Column -->
         <div class="col-span-3 p-4">
             
-            <h1 class="section-title">Evolution of animation</h1>
+            <h1 class="section-title">Evaluation of animation</h1>
             <ul>
             <li>A team can select any one of the subjects listed in the theme of the hackathon &ldquo;Celebrating India&rsquo;s Innovation&rdquo;.</li>
             <li>The participants are free to interpret the stories according to the current situations happening across the world.</li>
