--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,21 +42,22 @@ import FOSSEE from '../images/FOSSEE.png'
   <a href="/theme" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
     <!-- <img src="../images/theme.png" alt="Image 2" class="w-1/4 w-25"> -->
     <img  src={theme.src} alt="regi" decoding="async" />
-    <p class="text-center mt-2">Theme and Guidelines</p>
+    <p class="text-center mt-2">Theme of Hackathon</p>
   </a>
 
   <!-- Card 3 -->
   <a href="/submission" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
     <!-- <img src="../images/submission.png" alt="Image 3" class="w-1/4 w-25"> -->
     <img  src={submission.src} alt="regi" decoding="async" />
-    <p class="text-center mt-2">Submission of animation</p>
+    <p class="text-center mt-2">Guidelines and Submissions</p>
   </a>
+
 
   <!-- Card 4 -->
   <a href="evolution" class="flex-1 card border-indigo-600 items-center justify-center rounded-md overflow-hidden m-2">
     <!-- <img src="../images/evolution.png" alt="Image 4" class="w-1/4 w-25"> -->
     <img  src={evolution.src} alt="regi" decoding="async" />
-    <p class="text-center mt-2">Evolution &
+    <p class="text-center mt-2">Evaluation &
       Winner/Result</p>
   </a>
 
@@ -133,7 +134,7 @@ import FOSSEE from '../images/FOSSEE.png'
           <li>Participate as an individual or as a team (max. 4 members).</li>
           <li>High school/college students, faculty, professionals (animators, designers etc.) from any field who are interested in creating animations.</li>
           <li>Knowledge of basic graphics, designing and animation is required.</li>
-          <li>Prior knowledge of using Synfig Studio to create 2D animation is expected. If you are self motivated and want to participate you can self learn Synfig Studio using Spoken tutorials. These are available in English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu.</li>
+          <li>Prior knowledge of using Synfig Studio to create 2D animation is expected. If you are self motivated and want to participate you can self learn Synfig Studio using <a href="spoken-tutorial.org">Spoken tutorials</a>. These are available in English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu.</li>
           </ul></div>
       </div>
       
@@ -250,7 +251,7 @@ import FOSSEE from '../images/FOSSEE.png'
             </a>
           </div>
           <div class="px-4 pt-4 pb-1">
-            <a href="https://fossee.in" target="_blank">
+            <a href="https://spoken-tutorial.org/" target="_blank">
               <img src={spoken.src} alt="poster" decoding="async" />
                 <!-- <img src="../images/image13.png" class="w-full max-w-xs mx-auto logos" alt="FOSSEE"> -->
             </a>
@@ -333,7 +334,7 @@ import FOSSEE from '../images/FOSSEE.png'
   </div>
 </section>
 <!---------------------- -->
-<section id="rules" class="py-3">
+<section id="rules" class="py-3 container">
 <div class="container pt-3" style="background-color: #bbab8b;">
   <div class="flex items-center justify-center" style="background-color: #ffffff;">
 
