--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -6,12 +6,13 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
 <DefaultLayout title="Register">
     <div class="container grid grid-cols-1 sm:grid-cols-4 gap-4">
           <!-- 1/4 Width Column -->
-          <div class="col-span-1 bg-gray-300 p-4">
+          <div class="items-center  justify-center col-span-1 bg-gray-300 p-4" style="text-align: center;">
             <img src=""/>
-            <h1 class="section-title">Register</h1>
-            Scan QR code for registration or 
+            <h1 class="section-title">Register</h1><br />
+            <div>Scan QR code for registration or 
             click on  - I like to participate - Link of Google form
-        
+          </div>
+        <!-- <imsrc qr code -->
         </div>
         <!-- 3/4 Width Column -->
         <div class="col-span-3 p-4">
