--- a/src/pages/submission.astro
+++ b/src/pages/submission.astro
@@ -8,22 +8,21 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
           <!-- 1/4 Width Column -->
           <div class="col-span-1 bg-gray-300 p-4">
             <img src=""/>
-            <h1 class="section-title">Register</h1>
-            Scan QR code for registration or 
-            click on  - I like to participate - Link of Google form
+            <h1 class="section-title">Submit animation at<a href=" https://courses.fossee.in">https://courses.fossee.in</a>. </h1>
+    
         
         </div>
         <!-- 3/4 Width Column -->
         <div class="col-span-3 p-4">
             
-                <h1 class="section-title">Read before registration
+                <h1 class="section-title">Submission Guidelines
                 </h1>
                 <ul style="list-style: circle;">
                     
                         <li>After confirming your participation in the Hackathon, the login credentials will be generated and sent to you on the registered email ID.</li>
                         <li>The participants have to submit animation at <a href="https://courses.fossee.in" target="_blank">https://courses.fossee.in.</a></li>
                         </ul>
-                        <h1 class="section-title">Read before registration
+                        <h1 class="section-title">Properties of animation:
                         </h1>
                         <ul style="list-style: circle;">
                             
@@ -48,7 +47,19 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
                                     <li>Compress the folder and upload in zip format only.</li>
                                     <li>The last date of submission is 15 May 2024 till midnight. The participants can modify their submission anytime within this deadline.</li>
                                     </ul>
-          
+                                    <h1 class="section-title">Steps to submit animation
+                                    </h1>
+                                    <ul style="list-style: circle;">
+                                        
+                                       
+                                      <li>Go to https://courses.fossee.in</li>
+                                      <li>Click on the "Log in" button available on the top right of the page.</li>
+                                      <li>Enter the username and password as received over mail and click on "Log in".</li>
+                                      <li>After logging in for the first time, you will be prompted to update the password.</li>
+                                      <li>Click on the "Synfig Studio 2D Animation Hackathon" available in the left panel of your dashboard.</li>
+                                      <li>Scroll down and go to the "Animation Submission Upload" section.</li>
+                                      <li>Go to "Click here to add your submission" to submit your files for the hackathon.</li>
+                                      </ul>
           
         </div>
       
